--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.5",
+    "axios": "^1.3.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.21.0",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.5",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
