v2 design simplify barriers

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="scrub-network-6b7f4.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="722490648154"
 NEXT_PUBLIC_FIREBASE_MESSAGING_APP_ID="1:722490648154:web:ce097c4c68d204ccceda63"
 NEXT_PUBLIC_FIREBASE_MESSAGING_MEASUREMENT_ID="G-9197301RJ6"
-NEXT_PUBLIC_JWT_SECRET_KEY="DJEOIJWE5SD2F4S16156D1FAS3"
+NEXT_PUBLIC_SECRET_KEY="DJEOIJWE5SD2F4S16156D1FAS3"
+NEXT_PUBLIC_GOOGLE_PROJECT_ID="scrub-network-6b7f4"
