--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.1.5",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.21.0",
+    "googleapis": "^112.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "next": "13.1.5",
